# tsearch-code

./: .gitignore  .travis.yml  COPYING  ChangeLog  ChangeLog2021  ESSAY.txt  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
scripts/: CLEANUP  extractwords.py
src/: ChangeLog  ChangeLog2021  ChangeLog2022  Makefile  Makefile.am  dwarf_tsearch.c  dwarf_tsearch.h  dwarf_tsearchbal.c  dwarf_tsearchbin.c  dwarf_tsearchepp.c  dwarf_tsearchhash.c  dwarf_tsearchred.c  tsearch.c  tsearch_tester.c
test/: BUILDWORDFILE  Makefile.am  RUNTEST  runtests.sh  sortedwords  testwords
