###Copyright (C) 2018 David Anderson
###This code is public domain and can be freely used or copied.

MAINTAINERCLEANFILES = Makefile.in

CLEANFILES= 


check:
TESTS = ./runtests.sh
AM_TESTS_ENVIRONMENT = DWTOPSRCDIR='$(top_srcdir)'; export DWTOPSRCDIR;

EXTRA_DIST = \
BUILDWORDFILE \ 
runtests.sh  \
sortedwords  \
testwords
